# Calculator

./: CMakeLists.txt  main.cpp
Calculator_tests/: Calculator_tests.h  main.cpp
Resources/: calculation_results.txt  source_code.ace
include/: Ace.h
include/Calculator/: Calculator.h
include/Expression/: Node.h  Parser.h
include/Interpretator/: Interpretator.h
include/Lexer/: Parser.h  Token.h
include/Literals/: Parser.h
include/SourceManager/: SourceManager.h
include/lib/: CharacterSet.h  Dictionary.h  FileManager.h  StringManager.h
include/lib/Array/: Array.h  array_iterator.h
src/: Ace.cpp
src/Calculator/: Calculator.cpp
src/Expression/: Parser.cpp
src/Interpretator/: Interpretator.cpp
src/Lexer/: Parser.cpp  Token.cpp
src/Literals/: Parser.cpp
src/SourceManager/: SourceManager.cpp
src/lib/: CharacterSet.cpp  FileManager.cpp
